Changing the expected network descriptor to 31337 to match hardhat config so that validator whitelist works.

--- a/smart-contracts/src/devenv/templates/launch.json.hbs
+++ b/smart-contracts/src/devenv/templates/launch.json.hbs
@@ -10,7 +10,7 @@
       "cwd": "${workspaceFolder}/smart-contracts",
       "type": "node",
       "request": "launch",
-      "name": "Dev Environment Debugger",
+      "name": "Debug DevENV scripts",
       "skipFiles": [
         "<node_internals>/**"
       ],
