Made a correction to the launch.json template files to dynmaically point to the bridge registry rather then hardcode it.

--- a/smart-contracts/src/devenv/templates/launch.json.hbs
+++ b/smart-contracts/src/devenv/templates/launch.json.hbs
@@ -31,7 +31,7 @@
         "{{@root.ethResults.chainId}}",
         "{{@root.sifResults.tcpurl}}",
         "ws://{{@root.ethResults.httpHost}}:{{@root.ethResults.httpPort}}/",
-        "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e",
+        "{{@root.contractResults.contractAddresses.bridgeRegistry}}",
         "{{this.name}}",
         "--chain-id",
         "localnet",
@@ -64,7 +64,7 @@
         "{{@root.ethResults.chainId}}",
         "{{@root.sifResults.tcpurl}}",
         "ws://{{@root.ethResults.httpHost}}:{{@root.ethResults.httpPort}}/",
-        "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e",
+        "{{@root.contractResults.contractAddresses.bridgeRegistry}}",
         "{{this.name}}",
         "--chain-id",
         "localnet",
