Current progress on the pairprogramming dev session on integration tests.

--- a/smart-contracts/src/devenv/templates/env.hbs
+++ b/smart-contracts/src/devenv/templates/env.hbs
@@ -6,7 +6,6 @@ export ETHEREUM_PRIVATE_KEY="{{accounts.available.[0].privateKey}}"
 export ETHEREUM_ADDRESS_{{@index}}="{{this.address}}"
 export ETHEREUM_PRIVATE_KEY_{{@index}}="{{this.privateKey}}"
 {{/each}}
-export ROWAN_SOURCE="{{accounts.operator.privateKey}}"
 export ETH_ACCOUNT_OPERATOR_ADDRESS="{{accounts.operator.address}}"
 export ETH_ACCOUNT_OPERATOR_PRIVATEKEY="{{accounts.operator.privateKey}}"
 export ETH_ACCOUNT_OWNER_ADDRESS="{{accounts.owner.address}}"
@@ -25,6 +24,7 @@ export ETH_CHAIN_ID="{{chainId}}"
 export ETH_HOST="{{httpHost}}"
 export ETH_PORT="{{httpPort}}"
 {{/with}}
+export ROWAN_SOURCE="{{Dev.sifResults.adminAddress.account}}"
 {{#with Dev.contractResults}}
 export BRIDGE_BANK_ADDRESS="{{contractAddresses.bridgeBank}}"
 export BRIDGE_REGISTERY_ADDRESS="{{contractAddresses.bridgeRegistry}}"
