--- a/smart-contracts/src/devenv/templates/env.json.hbs
+++ b/smart-contracts/src/devenv/templates/env.json.hbs
@@ -6,7 +6,6 @@
   "ETHEREUM_ADDRESS_{{@index}}":"{{this.address}}",
   "ETHEREUM_PRIVATE_KEY_{{@index}}":"{{this.privateKey}}",
   {{/each}}
-  "ROWAN_SOURCE":"{{accounts.operator.privateKey}}",
   "ETH_ACCOUNT_OPERATOR_ADDRESS":"{{accounts.operator.address}}",
   "ETH_ACCOUNT_OPERATOR_PRIVATEKEY":"{{accounts.operator.privateKey}}",
   "ETH_ACCOUNT_OWNER_ADDRESS":"{{accounts.owner.address}}",
@@ -25,6 +24,7 @@
   "ETH_HOST":"{{httpHost}}",
   "ETH_PORT":"{{httpPort}}",
   {{/with}}
+  "ROWAN_SOURCE":"{{Dev.sifResults.adminAddress.account}}",
   {{#with Dev.contractResults}}
   "BRIDGE_BANK_ADDRESS":"{{contractAddresses.bridgeBank}}",
   "BRIDGE_REGISTERY_ADDRESS":"{{contractAddresses.bridgeRegistry}}",
