Updated the handlebars files for env files in outputWriter.

--- a/smart-contracts/src/devenv/templates/env.hbs
+++ b/smart-contracts/src/devenv/templates/env.hbs
@@ -66,4 +66,5 @@ export WITNESS_NAME_{{@index}}="{{this.name}}"
 {{/with}}
 {{#with Computed.CHAINDIR}}
 export CHAINDIR="{{this}}"
+export HOME="{{this}}"
 {{/with}}
