--- a/smart-contracts/src/devenv/templates/env.json.hbs
+++ b/smart-contracts/src/devenv/templates/env.json.hbs
@@ -66,6 +66,7 @@
   {{/with}}
   {{#with Computed.CHAINDIR}}
   "CHAINDIR":"{{this}}",
+  "HOME":"{{this}}",
   {{/with}}
   "BASEDIR":"{{Computed.BASEDIR}}"
 }
