Added token metadata step for peggy unit tests

--- a/smart-contracts/src/devenv/templates/launch.json.hbs
+++ b/smart-contracts/src/devenv/templates/launch.json.hbs
@@ -116,6 +116,8 @@
         "start",
         "--log_format",
         "json",
+        "--log_level",
+        "debug",
         "--minimum-gas-prices",
         "0.5rowan",
         "--rpc.laddr",
