Updated devenv for ebrelayer flag changes

--- a/smart-contracts/src/devenv/templates/launch.json.hbs
+++ b/smart-contracts/src/devenv/templates/launch.json.hbs
@@ -48,10 +48,15 @@
       },
       "args": [
         "init-relayer",
+        "--network-descriptor",
         "{{@root.Dev.ethResults.chainId}}",
+	    "--tendermint-node",
         "{{@root.Dev.sifResults.tcpurl}}",
+	    "--web3-provider",
         "ws://{{@root.Dev.ethResults.httpHost}}:{{@root.Dev.ethResults.httpPort}}/",
+	    "--bridge-registry-contract-address",
         "{{@root.Dev.contractResults.contractAddresses.bridgeRegistry}}",
+	    "--validator-mnemonic",
         "{{this.name}}",
         "--chain-id",
         "localnet",
