Remove commented code, cleanup launch json

--- a/smart-contracts/src/devenv/templates/launch.json.hbs
+++ b/smart-contracts/src/devenv/templates/launch.json.hbs
@@ -139,7 +139,7 @@
         "-olog_level=DEBUG",
         "-olog_file=/tmp/pytest.out",
         "-v",
-        "test/integration/src/peggy2/test_eth_transfers.py::test_commission_token_to_sifnode_and_back"
+        "test/integration/src/peggy2/test_eth_transfers.py"
       ],
       "cwd": "${workspaceRoot}",
       "env": {{{Env}}},
